force-app/main/default/objects/User/fields/BUFormula__c.field-meta.xml
<CustomField>
    <fullName>BUFormula__c</fullName>
    <label>BU（転記）</label>
    <length>32</length>
    <type>Text</type>
</CustomField>