force-app/main/default/objects/User/fields/ConcurrentManager__c.field-meta.xml
<CustomField>
    <fullName>ConcurrentManager__c</fullName>
    <label>兼務マネージャ</label>
    <relationshipName>rConcurrentManager</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>