force-app/main/default/objects/User/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>所属部</label>
    <length>255</length>
    <type>Text</type>
</CustomField>