force-app/main/default/objects/User/fields/DepartmentAndDivision__c.field-meta.xml
<CustomField>
    <fullName>DepartmentAndDivision__c</fullName>
    <label>本支社/製作所</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01_本社</fullName>
            </value>
            <value>
                <fullName>02_北海道支社</fullName>
            </value>
            <value>
                <fullName>03_東北支社</fullName>
            </value>
            <value>
                <fullName>04_関越支社</fullName>
            </value>
            <value>
                <fullName>05_神奈川支社</fullName>
            </value>
            <value>
                <fullName>06_北陸支社</fullName>
            </value>
            <value>
                <fullName>07_中部支社</fullName>
            </value>
            <value>
                <fullName>08_関西支社</fullName>
            </value>
            <value>
                <fullName>09_中国支社</fullName>
            </value>
            <value>
                <fullName>10_四国支社</fullName>
            </value>
            <value>
                <fullName>11_九州支社</fullName>
            </value>
            <value>
                <fullName>12_伊丹製作所</fullName>
            </value>
            <value>
                <fullName>13_神戸製作所</fullName>
            </value>
            <value>
                <fullName>14_受配電システム製作所</fullName>
            </value>
            <value>
                <fullName>15_系統変電システム製作所</fullName>
            </value>
            <value>
                <fullName>16_プラント建設統括部</fullName>
            </value>
            <value>
                <fullName>17_MPEC</fullName>
            </value>
            <value>
                <fullName>18_Ｉ戦室</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>