force-app/main/default/objects/User/fields/DepartmentAndDivisionCopy__c.field-meta.xml
<CustomField>
    <fullName>DepartmentAndDivisionCopy__c</fullName>
    <description>本支社/製作所の値を他オブジェクトのデフォルト値設定に利用するためのテキスト項目。
本支社/製作所の値をフローでコピーして保持する。</description>
    <label>本支社/製作所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>