force-app/main/default/objects/User/fields/Division01__c.field-meta.xml
<CustomField>
    <fullName>Division01__c</fullName>
    <label>所属課</label>
    <length>255</length>
    <type>Text</type>
</CustomField>