force-app/main/default/objects/User/fields/DivisionAndRole__c.field-meta.xml
<CustomField>
    <fullName>DivisionAndRole__c</fullName>
    <description>依頼タスクの承認履歴に表示するユーザーの所属情報</description>
    <formula>IF(ISBLANK(Division ), &quot;(ディビジョン未設定)&quot;, Division ) &amp; &quot;　&quot; &amp;  IF(ISBLANK(Title), &quot;担当者&quot;, Title)</formula>
    <label>所属情報</label>
    <type>Text</type>
</CustomField>