force-app/main/default/objects/User/fields/DivisionText__c.field-meta.xml
<CustomField>
    <fullName>DivisionText__c</fullName>
    <description>ディビジョン項目を転記した項目</description>
    <label>ディビジョン</label>
    <length>255</length>
    <type>Text</type>
</CustomField>