force-app/main/default/objects/User/fields/InformationSystemID__c.field-meta.xml
<CustomField>
    <fullName>InformationSystemID__c</fullName>
    <externalId>true</externalId>
    <label>情報システムID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>