force-app/main/default/objects/User/fields/IsICPFlag__c.field-meta.xml
<CustomField>
    <fullName>IsICPFlag__c</fullName>
    <formula>CONTAINS(UserRole.Name, &quot;Ｉ戦室 コンプライアンス部&quot;)</formula>
    <label>ICPユーザフラグ</label>
    <type>Checkbox</type>
</CustomField>