force-app/main/default/objects/User/fields/Jikansui_Flag__c.field-meta.xml
<CustomField>
    <fullName>Jikansui_Flag__c</fullName>
    <formula>CONTAINS( UserRole.Name , &quot;事業管理推進部&quot;)</formula>
    <label>事管推フラグ</label>
    <type>Checkbox</type>
</CustomField>