force-app/main/default/objects/User/fields/K_Flag__c.field-meta.xml
<CustomField>
    <fullName>K_Flag__c</fullName>
    <formula>CONTAINS( UserRole.Name , &quot;課長&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>課長フラグ</label>
    <type>Checkbox</type>
</CustomField>