force-app/main/default/objects/User/fields/QueueNameList__c.field-meta.xml
<CustomField>
    <fullName>QueueNameList__c</fullName>
    <label>参加キューリスト</label>
    <length>255</length>
    <type>Text</type>
</CustomField>