force-app/main/default/objects/User/fields/SectionManagerGeneralManagerConcurrent__c.field-meta.xml
<CustomField>
    <fullName>SectionManagerGeneralManagerConcurrent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>課長・部長兼任フラグ</label>
    <type>Checkbox</type>
</CustomField>