force-app/main/default/objects/User/listViews/AllUsersActive.listView-meta.xml
<ListView>
    <fullName>AllUsersActive</fullName>
    <columns>CORE.USERS.DIVISION</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>InformationSystemID__c</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>すべての有効ユーザー</label>
</ListView>