force-app/main/default/objects/User/listViews/X01_4.listView-meta.xml
<ListView>
    <fullName>X01_4</fullName>
    <columns>FULL_NAME</columns>
    <columns>InformationSystemID__c</columns>
    <columns>Department__c</columns>
    <columns>Division01__c</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>MANAGER</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.DIVISION</field>
        <operation>contains</operation>
        <value>本社　官公</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>FULL_NAME</field>
        <operation>notContain</operation>
        <value>テスト,test</value>
    </filters>
    <label>01-4_本官公のユーザー</label>
</ListView>