force-app/main/default/objects/User/listViews/X04.listView-meta.xml
<ListView>
    <fullName>X04</fullName>
    <columns>FULL_NAME</columns>
    <columns>InformationSystemID__c</columns>
    <columns>Department__c</columns>
    <columns>Division01__c</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>MANAGER</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.DIVISION</field>
        <operation>startsWith</operation>
        <value>神奈支　社</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>FULL_NAME</field>
        <operation>notContain</operation>
        <value>テスト,test</value>
    </filters>
    <label>05_神奈支・社会シのユーザー</label>
</ListView>